--- a/index.html
+++ b/index.html
@@ -42,19 +42,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <!-- Placeholder for 3D Mockup -->
-                <div class="mockup-placeholder">
-                    <div class="mockup-book">
-                        <div class="book-cover">
-                            <h2>Aliança de Moeda</h2>
-                            <p>do Zero ao Acabamento de Joalheria</p>
-                            <div class="badges">
-                                <span>Método A.R.O.</span>
-                                <span>Renda Extra</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <img src="hero-book.png" alt="Ebook Aliança de Moeda - Capa 3D" class="hero-img-real">
             </div>
         </div>
         <div class="hero-overlay"></div>
