--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <p class="quote">"Eu achava que precisava de ferramenta cara, mas com o método eu consegui fazer
                         minha primeira peça vendável em poucos dias."</p>
                     <div class="author">
-                        <div class="avatar">M</div>
+                        <img src="testimonial-mariana.png" alt="Mariana" class="avatar-img">
                         <span>Mariana, SP</span>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                     <p class="quote">"O que me travava era o brilho. Depois que entendi as camadas, minhas peças
                         começaram a parecer joia de verdade."</p>
                     <div class="author">
-                        <div class="avatar">R</div>
+                        <img src="testimonial-rafael.png" alt="Rafael" class="avatar-img">
                         <span>Rafael, MG</span>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                     <p class="quote">"Quando montei a coleção com 3 modelos e padronizei as fotos, as pessoas começaram
                         a perguntar preço."</p>
                     <div class="author">
-                        <div class="avatar">A</div>
+                        <img src="testimonial-aline.png" alt="Aline" class="avatar-img">
                         <span>Aline, PR</span>
                     </div>
                 </div>
